<resources>
    <string name="app_name">StartProject</string>
    <string name="pkg_name">PackageManager</string>

    <string name="text_room">Room</string>
    <string name="text_flow">Flow</string>
    <string name="text_event_bus">Event bus</string>
    <string name="text_live_event_bus">Live event bus</string>
    <string name="text_text_watcher">Text watcher</string>
    <string name="text_sample">Sample</string>
    <string name="text_animation">Animation</string>
    <string name="text_join">Join</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_cancel_task">Cancel task</string>
    <string name="text_login">Login</string>
    <string name="text_name">Name</string>
    <string name="text_password">Password</string>
    <string name="text_mail">E-mail</string>
    <string name="text_reset">Reset</string>
    <string name="text_chain">Chain</string>
    <string name="text_websocket">WebSocket</string>
    <string name="text_navigation">Navigation Advanced</string>
    <string name="text_draw">Draw</string>
    <string name="text_adb_cmd">Adb cmd</string>
    <string name="text_runtime_exec">Runtime exec</string>
    <string name="text_file">File</string>
    <string name="text_start">Start</string>
    <string name="text_finish">Finish</string>
    <string name="text_processing">Processing</string>
    <string name="text_ok">OK</string>
    <string name="text_share">Share</string>
    <string name="text_viewpager2">ViewPager2</string>
    <string name="text_data_structure">Data structure</string>
    <string name="text_preference">Preference</string>
    <string name="text_blur">Blur</string>
    <string name="text_floating">Floating</string>
    <string name="text_floating_2">Floating 2</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_view">TextView</string>
    <string name="text_sort">Sort</string>
    <string name="text_encrypt">Encrypt</string>
    <string name="text_override_transition">Override transition</string>
    <string name="text_gson">Gson</string>
    <string name="text_drag_drop">Drag and drop</string>
    <string name="text_custom">Custom views</string>
    <string name="text_chart">Chart</string>
    <string name="text_activity_result">Activity result</string>
    <string name="text_color_picker">Color picker</string>
    <string name="text_package_manager">Package Manager</string>
    <string name="text_google_sign_in">Google Sign In</string>
    <string name="text_google_sign_in2">Google Sign In 2</string>
    <string name="text_clipboard">Clipboard</string>
    <string name="text_table_layout">TableLayout</string>
    <string name="text_bottom_sheet">Bottom Sheet</string>
    <string name="text_bottom_sheet_2">Bottom Sheet 2</string>
    <string name="text_blank">Blank</string>
    <string name="text_adjacent">Adjacent</string>
    <string name="text_drag_helper">Drag helper</string>
    <string name="text_clip">Clip</string>

    <string name="message_file_not_found">File not found.</string>
    <string name="message_wait">Wait a second.</string>
    <string name="message_back_disable">Back button disable.</string>

    <string name="text_app">App</string>
    <string name="text_icon">Icon</string>
    <string name="text_language">Language</string>
    <string name="text_search">Search</string>
    <string name="text_installed">Installed</string>
    <string name="text_loading">Loading</string>
</resources>
