<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:cardBackgroundColor="@color/smoke_white" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="Search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btnPopupMenu"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="Popup menu"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_room"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_room"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_flow"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_flow"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_file"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_file"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_pager"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_viewpager2"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_event_bus"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_event_bus"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_live_event_bus"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_live_event_bus"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_edit"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_text_watcher"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_vector"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_animation"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_sample"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_sample"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_login"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_login"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_websocket"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_websocket"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_navigation"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_navigation"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_chain"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_chain"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_draw"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_draw"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_adb_cmd"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_adb_cmd"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_runtime_exec"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_runtime_exec"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_data_structure"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_data_structure"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_preference"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_preference"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_blur"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_blur"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_floating"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_floating"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_text_view"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_view"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_vibrate"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_vibrate"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_sort"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_sort"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_encrypt"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_encrypt"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_override_transition"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_override_transition"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_gson"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_gson"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_drag"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_drag_drop"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_custom"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_custom"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_seek_bar"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="SeekBar"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_spec"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="Spec"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_live_data_adv"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="Live data adv."
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_chart"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_chart"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_activity_result"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_activity_result"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_color_picker"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_color_picker"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_package_manager"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_package_manager"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_google_login"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_google_sign_in"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

    <com.yulichswift.roundedview.widget.RoundedTextView
        android:id="@+id/btn_clipboard"
        style="@style/btn_size_14"
        android:layout_marginTop="10dp"
        android:text="@string/text_clipboard"
        app:btn_corner_radius="standard"
        app:btn_pressed_color="@android:color/darker_gray"
        app:btn_solid_color="@android:color/black" />

</LinearLayout>
