<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.flowcontrol.FlowControlActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="更新個人資料, 允許覆寫."
                app:layout_constraintEnd_toEndOf="@id/btn_cancel_task_1"
                app:layout_constraintStart_toStartOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_cancel"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel_task_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_task_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel_task"
                app:backgroundTint="@android:color/holo_red_light"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="@id/btn_cancel" />

            <TextView
                android:id="@+id/tv_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="金流, 訂位, 不可覆寫."
                app:layout_constraintEnd_toEndOf="@id/btn_cancel_task_2"
                app:layout_constraintStart_toStartOf="@id/btn_join"
                app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_join"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel_task_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_join" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel_task_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel_task"
                app:backgroundTint="@android:color/holo_red_light"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_join"
                app:layout_constraintTop_toTopOf="@id/btn_join" />

            <TextView
                android:id="@+id/text_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/btn_join"
                tools:text="Log" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>